# pc-resource-manager

./: .gitignore  README.md  main.py  monitor_logic.py  pyproject.toml  run.sh  styles.css  test_gtk.py
