[project]
name = "pc-resource-manager"
version = "1.0.0"
description = "Cross-platform PC resource monitoring tool with GTK4"
requires-python = ">=3.10"
dependencies = [
    "psutil>=5.9.0",
]

[project.scripts]
pc-resource-manager = "main:main"

[dependency-groups]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
